--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,8 @@
 SUBDIRS = $(TOPSUBDIRS)
 
+dist_man_MANS = kcheckgmail.1
+man_MANS = kcheckgmail.1
+
 $(top_srcdir)/configure.in: configure.in.in $(top_srcdir)/subdirs
 	cd $(top_srcdir) && $(MAKE) -f admin/Makefile.common configure.in ;
 
