--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -303,8 +303,8 @@ xdg_directorydir = @xdg_directorydir@
 xdg_menudir = @xdg_menudir@
 #>- POFILES = AUTO
 #>+ 2
-POFILES = es.po pt_BR.po tr.po sv.po it.po pl.po de.po ar.po ko.po lt.po hu.po ru.po pt.po sk.po et.po fr.po
-GMOFILES = es.gmo pt_BR.gmo tr.gmo sv.gmo it.gmo pl.gmo de.gmo ar.gmo ko.gmo lt.gmo hu.gmo ru.gmo pt.gmo sk.gmo et.gmo fr.gmo
+POFILES = es.po pt.po ru.po it.po et.po sv.po pl.po sk.po ko.po de.po hu.po ar.po tr.po pt_BR.po lt.po fr.po
+GMOFILES = es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo pl.gmo sk.gmo ko.gmo de.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo fr.gmo
 #>- all: all-am
 #>+ 1
 all: all-nls docs-am  all-am
@@ -497,65 +497,65 @@ uninstall-am: uninstall-info-am
 .NOEXPORT:
 
 #>+ 2
-KDE_DIST=pt.po Makefile.in kcheckgmail.pot ru.po ko.po pt_BR.po sv.po hu.po ar.po lt.po de.po pl.po es.po et.po fr.po sk.po it.po Makefile.am tr.po 
+KDE_DIST=tr.gmo sv.gmo pl.gmo kcheckgmail.pot pt.po ko.gmo ru.po ru.gmo ko.po ar.po de.po et.po fr.gmo fr.po et.gmo tr.po sk.gmo lt.gmo pt_BR.gmo ar.gmo Makefile.in pt_BR.po it.gmo sv.po hu.po de.gmo pl.po lt.po es.po pt.gmo es.gmo it.po sk.po hu.gmo Makefile.am 
 
 #>+ 49
 es.gmo: es.po
 	rm -f es.gmo; $(GMSGFMT) -o es.gmo $(srcdir)/es.po
 	test ! -f es.gmo || touch es.gmo
-pt_BR.gmo: pt_BR.po
-	rm -f pt_BR.gmo; $(GMSGFMT) -o pt_BR.gmo $(srcdir)/pt_BR.po
-	test ! -f pt_BR.gmo || touch pt_BR.gmo
-tr.gmo: tr.po
-	rm -f tr.gmo; $(GMSGFMT) -o tr.gmo $(srcdir)/tr.po
-	test ! -f tr.gmo || touch tr.gmo
-sv.gmo: sv.po
-	rm -f sv.gmo; $(GMSGFMT) -o sv.gmo $(srcdir)/sv.po
-	test ! -f sv.gmo || touch sv.gmo
-it.gmo: it.po
-	rm -f it.gmo; $(GMSGFMT) -o it.gmo $(srcdir)/it.po
-	test ! -f it.gmo || touch it.gmo
-pl.gmo: pl.po
-	rm -f pl.gmo; $(GMSGFMT) -o pl.gmo $(srcdir)/pl.po
-	test ! -f pl.gmo || touch pl.gmo
-de.gmo: de.po
-	rm -f de.gmo; $(GMSGFMT) -o de.gmo $(srcdir)/de.po
-	test ! -f de.gmo || touch de.gmo
-ar.gmo: ar.po
-	rm -f ar.gmo; $(GMSGFMT) -o ar.gmo $(srcdir)/ar.po
-	test ! -f ar.gmo || touch ar.gmo
-ko.gmo: ko.po
-	rm -f ko.gmo; $(GMSGFMT) -o ko.gmo $(srcdir)/ko.po
-	test ! -f ko.gmo || touch ko.gmo
-lt.gmo: lt.po
-	rm -f lt.gmo; $(GMSGFMT) -o lt.gmo $(srcdir)/lt.po
-	test ! -f lt.gmo || touch lt.gmo
-hu.gmo: hu.po
-	rm -f hu.gmo; $(GMSGFMT) -o hu.gmo $(srcdir)/hu.po
-	test ! -f hu.gmo || touch hu.gmo
-ru.gmo: ru.po
-	rm -f ru.gmo; $(GMSGFMT) -o ru.gmo $(srcdir)/ru.po
-	test ! -f ru.gmo || touch ru.gmo
 pt.gmo: pt.po
 	rm -f pt.gmo; $(GMSGFMT) -o pt.gmo $(srcdir)/pt.po
 	test ! -f pt.gmo || touch pt.gmo
-sk.gmo: sk.po
-	rm -f sk.gmo; $(GMSGFMT) -o sk.gmo $(srcdir)/sk.po
-	test ! -f sk.gmo || touch sk.gmo
+ru.gmo: ru.po
+	rm -f ru.gmo; $(GMSGFMT) -o ru.gmo $(srcdir)/ru.po
+	test ! -f ru.gmo || touch ru.gmo
+it.gmo: it.po
+	rm -f it.gmo; $(GMSGFMT) -o it.gmo $(srcdir)/it.po
+	test ! -f it.gmo || touch it.gmo
 et.gmo: et.po
 	rm -f et.gmo; $(GMSGFMT) -o et.gmo $(srcdir)/et.po
 	test ! -f et.gmo || touch et.gmo
+sv.gmo: sv.po
+	rm -f sv.gmo; $(GMSGFMT) -o sv.gmo $(srcdir)/sv.po
+	test ! -f sv.gmo || touch sv.gmo
+pl.gmo: pl.po
+	rm -f pl.gmo; $(GMSGFMT) -o pl.gmo $(srcdir)/pl.po
+	test ! -f pl.gmo || touch pl.gmo
+sk.gmo: sk.po
+	rm -f sk.gmo; $(GMSGFMT) -o sk.gmo $(srcdir)/sk.po
+	test ! -f sk.gmo || touch sk.gmo
+ko.gmo: ko.po
+	rm -f ko.gmo; $(GMSGFMT) -o ko.gmo $(srcdir)/ko.po
+	test ! -f ko.gmo || touch ko.gmo
+de.gmo: de.po
+	rm -f de.gmo; $(GMSGFMT) -o de.gmo $(srcdir)/de.po
+	test ! -f de.gmo || touch de.gmo
+hu.gmo: hu.po
+	rm -f hu.gmo; $(GMSGFMT) -o hu.gmo $(srcdir)/hu.po
+	test ! -f hu.gmo || touch hu.gmo
+ar.gmo: ar.po
+	rm -f ar.gmo; $(GMSGFMT) -o ar.gmo $(srcdir)/ar.po
+	test ! -f ar.gmo || touch ar.gmo
+tr.gmo: tr.po
+	rm -f tr.gmo; $(GMSGFMT) -o tr.gmo $(srcdir)/tr.po
+	test ! -f tr.gmo || touch tr.gmo
+pt_BR.gmo: pt_BR.po
+	rm -f pt_BR.gmo; $(GMSGFMT) -o pt_BR.gmo $(srcdir)/pt_BR.po
+	test ! -f pt_BR.gmo || touch pt_BR.gmo
+lt.gmo: lt.po
+	rm -f lt.gmo; $(GMSGFMT) -o lt.gmo $(srcdir)/lt.po
+	test ! -f lt.gmo || touch lt.gmo
 fr.gmo: fr.po
 	rm -f fr.gmo; $(GMSGFMT) -o fr.gmo $(srcdir)/fr.po
 	test ! -f fr.gmo || touch fr.gmo
 
 #>+ 3
 clean-nls:
-	-rm -f  es.gmo pt_BR.gmo tr.gmo sv.gmo it.gmo pl.gmo de.gmo ar.gmo ko.gmo lt.gmo hu.gmo ru.gmo pt.gmo sk.gmo et.gmo fr.gmo
+	-rm -f  es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo pl.gmo sk.gmo ko.gmo de.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo fr.gmo
 
 #>+ 10
 install-nls:
-	@for base in es pt_BR tr sv it pl de ar ko lt hu ru pt sk et fr ; do \
+	@for base in es pt ru it et sv pl sk ko de hu ar tr pt_BR lt fr ; do \
 	  echo $(INSTALL_DATA) $$base.gmo $(DESTDIR)$(kde_locale)/$$base/LC_MESSAGES/$(PACKAGE).mo ;\
 	  $(mkinstalldirs) $(DESTDIR)$(kde_locale)/$$base/LC_MESSAGES ; \
 	  if test -f $$base.gmo; then $(INSTALL_DATA) $$base.gmo $(DESTDIR)$(kde_locale)/$$base/LC_MESSAGES/$(PACKAGE).mo ;\
@@ -567,20 +567,20 @@ install-nls:
 #>+ 18
 uninstall-nls:
 	rm -f $(DESTDIR)$(kde_locale)/es/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/pt_BR/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/tr/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/sv/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/it/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/pl/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/de/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/ar/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/ko/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/lt/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/hu/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/ru/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/pt/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/sk/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/ru/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/it/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/et/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/sv/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/pl/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/sk/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/ko/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/de/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/hu/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/ar/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/tr/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/pt_BR/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/lt/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/fr/LC_MESSAGES/$(PACKAGE).mo
 
 #>+ 2
