--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -14,7 +14,7 @@ Comment[tr]=Gmail hesabınızda kaç tane yeni e-posta olduğunu gösteren bir p
 Comment[pt]=Uma 'applet' que inicia uma aplicação que mostra quantas mensagens por ler tem na sua conta Gmail.
 Comment[pl]=Aplet panelu do pokazywania zawartości Twojej skrzynki pocztowej Gmail
 Comment[it]=Un'applet di Kicker per visualizzare quanti messaggi di posta elettronica sono presenti nel tuo account di Gmail.
-Comment[fr]=Un applet kicker qui affiche le nombre de messages sur un compte GMail.
+Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
 Comment[ar]=بريمج يبين عدد الرسائل الإلكترونية في حساب GMail التي لديك.
 Exec=kcheckgmail
