--- a/debian/control
+++ b/debian/control
@@ -6,12 +6,19 @@ Uploaders: Jose Luis Tallon <jltallon@adv-solutions.net>, Raphael Geissert <atom
 Build-Depends: debhelper (>= 4.1.0), autotools-dev, kdelibs4-dev, libqt3-mt-dev, autoconf
 Standards-Version: 3.7.2
 Homepage: http://kcheckgmail.sourceforge.net/
+Vcs-Svn: https://kcheckgmail.svn.sourceforge.net/svnroot/kcheckgmail/trunk/
+Vcs-Browser: http://kcheckgmail.svn.sourceforge.net/viewvc/kcheckgmail/trunk/
 
 Package: kcheckgmail
 Architecture: any
 Depends: kdebase-bin (>= 3.2), ${shlibs:Depends}
-Description: A Gmail notifier for KDE
+Description: A Gmail notifier-like notifier for KDE
  KCheckGMail is a KDE systray application which checks Gmail accounts for
  new mail.
  .
- It includes KWallet support within some other features.
+ Some features include:
+  * New email notifications displaying message subject.
+  * Customisable check interval, web browser and more.
+  * Support for gmail's simple (pure HTML) and full interfaces.
+  * Customisable search.
+  * KWallet support.
