Added Walloon translation, thanks to Jean Cayron <jean.cayron@gmail.com>

--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -2,6 +2,7 @@
 Name=KCheckGMail
 Name[tr]=KCheckGmail
 GenericName=New email notifier
+GenericName[wa]=Notifieu d' noveas emiles
 GenericName[tr]=Yeni E-posta Bildiricisi
 GenericName[pt]=Notificador de mensagens novas
 GenericName[pl]=Powiadomienia o nowej poczcie
