Debian package version 0.5.7.4-1

--- a/debian/control
+++ b/debian/control
@@ -4,14 +4,14 @@ Priority: optional
 Maintainer: Jose Luis Tallon <jltallon@adv-solutions.net>
 Uploaders: Jose Luis Tallon <jltallon@adv-solutions.net>, Raphael Geissert <atomo64@gmail.com>
 Build-Depends: debhelper (>= 4.1.0), autotools-dev, kdelibs4-dev, libqt3-mt-dev, autoconf
-Standards-Version: 3.7.2
+Standards-Version: 3.7.3
 Homepage: http://kcheckgmail.sourceforge.net/
 Vcs-Svn: https://kcheckgmail.svn.sourceforge.net/svnroot/kcheckgmail/trunk/
 Vcs-Browser: http://kcheckgmail.svn.sourceforge.net/viewvc/kcheckgmail/trunk/
 
 Package: kcheckgmail
 Architecture: any
-Depends: kdebase-bin (>= 3.2), ${shlibs:Depends}
+Depends: kdebase-bin (>= 3.2), ${shlibs:Depends}, ${misc:Depends}
 Description: A Gmail notifier-like notifier for KDE
  KCheckGMail is a KDE systray application which checks Gmail accounts for
  new mail.
