Refactor the Configure KCheckGmail dialog.
All code now lives in the ConfigureDialog class.
KCheckGmail namespace added.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ INCLUDES = $(all_includes)
 bin_PROGRAMS = kcheckgmail
 
 kcheckgmail_SOURCES = advancedsettingswidget.ui appletsettingswidget.ui \
-	gmail.cpp gmailparser.cpp gmailwalletmanager.cpp kcheckgmailapp.cpp \
+	configdialog.cpp gmail.cpp gmailparser.cpp gmailwalletmanager.cpp kcheckgmailapp.cpp \
 	kcheckgmailiface.skel kcheckgmailtray.cpp loginsettingswidget.ui main.cpp \
 	netsettingswidget.ui prefs.kcfgc
 kcheckgmail_LDFLAGS = $(KDE_PLUGIN) $(all_libraries)
@@ -11,18 +11,9 @@ kcheckgmail_LDADD = $(LIB_KDEUI) $(LIB_KIO) -lkwalletclient
 
 METASOURCES = AUTO
 
-noinst_HEADERS = gmail.h \
-	gmailparser.h \
-	kcheckgmailapp.h \
-	kcheckgmailtray.h \
-	kcheckgmailiface.h \
-	gmailwalletmanager.h \
-	loginsettingswidget.h \
-	netsettingswidget.h \
-	prefs.h \
-	gmail_constants.h \
-	appletsettingswidget.h \
-	advancedsettingswidget.h
+noinst_HEADERS = advancedsettingswidget.h appletsettingswidget.h configdialog.h \
+	gmail.h gmail_constants.h gmailparser.h gmailwalletmanager.h kcheckgmailapp.h \
+	kcheckgmailiface.h kcheckgmailtray.h loginsettingswidget.h netsettingswidget.h prefs.h
 
 xdg_apps_DATA = kcheckgmail.desktop
 
