Add a core class.
KCheckGmailApp creates KCheckGmailCore. It's KCheckGmailCore job to create all
 necessary objects.

Currently KcheckGmailCore only creates KCheckGmailTray.
KCheckGmailCore is a singleton.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,8 +4,8 @@ bin_PROGRAMS = kcheckgmail
 
 kcheckgmail_SOURCES = advancedsettingswidget.ui appletsettingswidget.ui \
 	configdialog.cpp gmail.cpp gmailparser.cpp gmailwalletmanager.cpp kcheckgmailapp.cpp \
-	kcheckgmailiface.skel kcheckgmailtray.cpp loginsettingswidget.ui main.cpp \
-	netsettingswidget.ui prefs.kcfgc
+	kcheckgmailcore.cpp kcheckgmailiface.skel kcheckgmailtray.cpp loginsettingswidget.ui \
+	main.cpp netsettingswidget.ui prefs.kcfgc
 kcheckgmail_LDFLAGS = $(KDE_PLUGIN) $(all_libraries)
 kcheckgmail_LDADD = $(LIB_KDEUI) $(LIB_KIO) -lkwalletclient
 
@@ -13,7 +13,8 @@ METASOURCES = AUTO
 
 noinst_HEADERS = advancedsettingswidget.h appletsettingswidget.h configdialog.h \
 	gmail.h gmail_constants.h gmailparser.h gmailwalletmanager.h kcheckgmailapp.h \
-	kcheckgmailiface.h kcheckgmailtray.h loginsettingswidget.h netsettingswidget.h prefs.h
+	kcheckgmailcore.h kcheckgmailiface.h kcheckgmailtray.h loginsettingswidget.h \
+	netsettingswidget.h prefs.h
 
 xdg_apps_DATA = kcheckgmail.desktop
 
