--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -54,14 +54,14 @@ binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 am_kcheckgmail_OBJECTS = configdialog.$(OBJEXT) gmail.$(OBJEXT) \
 	gmailparser.$(OBJEXT) gmailwalletmanager.$(OBJEXT) \
-	kcheckgmailapp.$(OBJEXT) kcheckgmailtray.$(OBJEXT) \
-	main.$(OBJEXT)
+	kcheckgmailapp.$(OBJEXT) kcheckgmailcore.$(OBJEXT) \
+	kcheckgmailtray.$(OBJEXT) main.$(OBJEXT)
 #>- kcheckgmail_OBJECTS = $(am_kcheckgmail_OBJECTS)
 #>+ 5
 kcheckgmail_OBJECTS = configdialog.$(OBJEXT) gmail.$(OBJEXT) \
 	gmailparser.$(OBJEXT) gmailwalletmanager.$(OBJEXT) \
-	kcheckgmailapp.$(OBJEXT) kcheckgmailtray.$(OBJEXT) \
-	main.$(OBJEXT) kcheckgmailiface_skel.$(OBJEXT) advancedsettingswidget.$(OBJEXT) appletsettingswidget.$(OBJEXT) loginsettingswidget.$(OBJEXT) netsettingswidget.$(OBJEXT) prefs.$(OBJEXT)\
+	kcheckgmailapp.$(OBJEXT) kcheckgmailcore.$(OBJEXT) \
+	kcheckgmailtray.$(OBJEXT) main.$(OBJEXT) kcheckgmailiface_skel.$(OBJEXT) advancedsettingswidget.$(OBJEXT) appletsettingswidget.$(OBJEXT) loginsettingswidget.$(OBJEXT) netsettingswidget.$(OBJEXT) prefs.$(OBJEXT)\
 gmailparser.moc.o gmailwalletmanager.moc.o kcheckgmailapp.moc.o kcheckgmailtray.moc.o 
 am__DEPENDENCIES_1 =
 kcheckgmail_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
@@ -358,20 +358,21 @@ xdg_menudir = @xdg_menudir@
 INCLUDES = $(all_includes)
 #>- kcheckgmail_SOURCES = advancedsettingswidget.ui appletsettingswidget.ui \
 #>- 	configdialog.cpp gmail.cpp gmailparser.cpp gmailwalletmanager.cpp kcheckgmailapp.cpp \
-#>- 	kcheckgmailiface.skel kcheckgmailtray.cpp loginsettingswidget.ui main.cpp \
-#>- 	netsettingswidget.ui prefs.kcfgc
+#>- 	kcheckgmailcore.cpp kcheckgmailiface.skel kcheckgmailtray.cpp loginsettingswidget.ui \
+#>- 	main.cpp netsettingswidget.ui prefs.kcfgc
 #>+ 4
 kcheckgmail_SOURCES=  \
 	configdialog.cpp gmail.cpp gmailparser.cpp gmailwalletmanager.cpp kcheckgmailapp.cpp \
-	 kcheckgmailtray.cpp  main.cpp \
-	  kcheckgmailiface_skel.cpp advancedsettingswidget.cpp appletsettingswidget.cpp loginsettingswidget.cpp netsettingswidget.cpp prefs.cpp
+	kcheckgmailcore.cpp  kcheckgmailtray.cpp  \
+	main.cpp   kcheckgmailiface_skel.cpp advancedsettingswidget.cpp appletsettingswidget.cpp loginsettingswidget.cpp netsettingswidget.cpp prefs.cpp
 
 kcheckgmail_LDFLAGS = $(KDE_PLUGIN) $(all_libraries)
 kcheckgmail_LDADD = $(LIB_KDEUI) $(LIB_KIO) -lkwalletclient
 #>- METASOURCES = AUTO
 noinst_HEADERS = advancedsettingswidget.h appletsettingswidget.h configdialog.h \
 	gmail.h gmail_constants.h gmailparser.h gmailwalletmanager.h kcheckgmailapp.h \
-	kcheckgmailiface.h kcheckgmailtray.h loginsettingswidget.h netsettingswidget.h prefs.h
+	kcheckgmailcore.h kcheckgmailiface.h kcheckgmailtray.h loginsettingswidget.h \
+	netsettingswidget.h prefs.h
 
 xdg_apps_DATA = kcheckgmail.desktop
 rcdir = $(kde_datadir)/kcheckgmail
@@ -468,6 +469,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gmailparser.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gmailwalletmanager.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kcheckgmailapp.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kcheckgmailcore.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kcheckgmailtray.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 
@@ -733,6 +735,13 @@ kcheckgmailiface_skel.cpp: kcheckgmailiface.kidl
 	$(DCOPIDL2CPP) --c++-suffix cpp --no-signals --no-stub kcheckgmailiface.kidl
 
 #>+ 3
+kcheckgmailcore.moc: $(srcdir)/kcheckgmailcore.h
+	$(MOC) $(srcdir)/kcheckgmailcore.h -o kcheckgmailcore.moc
+
+#>+ 2
+mocs: kcheckgmailcore.moc
+
+#>+ 3
 configdialog.moc: $(srcdir)/configdialog.h
 	$(MOC) $(srcdir)/configdialog.h -o configdialog.moc
 
@@ -776,7 +785,7 @@ mocs: gmail.moc
 
 #>+ 3
 clean-metasources:
-	-rm -f  configdialog.moc gmailparser.moc.cpp gmailwalletmanager.moc.cpp kcheckgmailapp.moc.cpp kcheckgmailtray.moc.cpp gmail.moc
+	-rm -f  kcheckgmailcore.moc configdialog.moc gmailparser.moc.cpp gmailwalletmanager.moc.cpp kcheckgmailapp.moc.cpp kcheckgmailtray.moc.cpp gmail.moc
 
 #>+ 2
 KDE_DIST=Makefile.in kcheckgmail.lsm advancedsettingswidget.ui appletsettingswidget.ui prefs.kcfgc eventsrc netsettingswidget.ui prefs.kcfg kcheckgmail.desktop loginsettingswidget.ui Makefile.am 
@@ -860,13 +869,16 @@ no-final-install:
 kde-rpo-clean:
 	-rm -f *.rpo
 
-#>+ 14
+#>+ 17
 $(srcdir)/configdialog.cpp: advancedsettingswidget.h appletsettingswidget.h loginsettingswidget.h netsettingswidget.h prefs.h 
 $(srcdir)/main.cpp: advancedsettingswidget.h appletsettingswidget.h loginsettingswidget.h netsettingswidget.h prefs.h 
 $(srcdir)/gmailwalletmanager.cpp: advancedsettingswidget.h appletsettingswidget.h loginsettingswidget.h netsettingswidget.h prefs.h 
+$(srcdir)/kcheckgmailcore.cpp: advancedsettingswidget.h appletsettingswidget.h loginsettingswidget.h netsettingswidget.h prefs.h 
 configdialog.o: configdialog.moc 
 nmcheck: 
+kcheckgmailcore.o: kcheckgmailcore.moc 
 $(srcdir)/gmailparser.cpp: advancedsettingswidget.h appletsettingswidget.h loginsettingswidget.h netsettingswidget.h prefs.h 
+kcheckgmailcore.lo: kcheckgmailcore.moc 
 $(srcdir)/kcheckgmailtray.cpp: advancedsettingswidget.h appletsettingswidget.h loginsettingswidget.h netsettingswidget.h prefs.h 
 gmail.o: gmail.moc 
 nmcheck-am: nmcheck
