Move functionality away from KCheckGmailTray.
KCheckGmailTray was indeed the core class. It owned every functionality
relevant class in the project. KCheckGmailCore is now the core class. It
also owns the DCOP interface.

Add a JSProtocol (JavaScriptProtocol) class. JSProtocol owns (encapsulates)
GMailParser and GMail.

Change the way mail count updates are handled.The system tray must be
isolated from the internals of a mail count update.It should only receive
the updates and display them.

The Gmail (object) count update signals are now connected to the mJSP
object. mTray object no longer asks for computation of new and unread
messages. The loginDone signal is now connected to the mJSP object. The
mJSP then reemites a loginDone signal with the info to be displayedin the
systemtray. This way we can reset the counters if the connection is lost.

MailCounter contains the current count (both new and unread) and also the
previous.

KCheckGmailTray slotMailCountChanged and slotmailArrived are independent
now. slotMailCountChanged receives the number of unread messages

updateThreadMenu: No longer computes the Threads menu entries.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,18 +3,18 @@ INCLUDES = $(all_includes)
 bin_PROGRAMS = kcheckgmail
 
 kcheckgmail_SOURCES = advancedsettingswidget.ui appletsettingswidget.ui \
-	configdialog.cpp gmail.cpp gmailparser.cpp gmailwalletmanager.cpp kcheckgmailapp.cpp \
-	kcheckgmailcore.cpp kcheckgmailiface.skel kcheckgmailtray.cpp loginsettingswidget.ui \
-	main.cpp netsettingswidget.ui prefs.kcfgc
+	configdialog.cpp gmail.cpp gmailparser.cpp gmailwalletmanager.cpp jsprotocol.cpp \
+	kcheckgmailapp.cpp kcheckgmailcore.cpp kcheckgmailiface.skel kcheckgmailtray.cpp \
+	loginsettingswidget.ui mailcounter.cpp main.cpp netsettingswidget.ui prefs.kcfgc
 kcheckgmail_LDFLAGS = $(KDE_PLUGIN) $(all_libraries)
 kcheckgmail_LDADD = $(LIB_KDEUI) $(LIB_KIO) -lkwalletclient
 
 METASOURCES = AUTO
 
 noinst_HEADERS = advancedsettingswidget.h appletsettingswidget.h configdialog.h \
-	gmail.h gmail_constants.h gmailparser.h gmailwalletmanager.h kcheckgmailapp.h \
-	kcheckgmailcore.h kcheckgmailiface.h kcheckgmailtray.h loginsettingswidget.h \
-	netsettingswidget.h prefs.h
+	gmail.h gmail_constants.h gmailparser.h gmailwalletmanager.h jsprotocol.h \
+	kcheckgmailapp.h kcheckgmailcore.h kcheckgmailcore_p.h kcheckgmailiface.h \
+	kcheckgmailtray.h loginsettingswidget.h mailcounter.h netsettingswidget.h prefs.h
 
 xdg_apps_DATA = kcheckgmail.desktop
 
