Add a value separator after 'Network' to calm down some strict parsers

--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -22,4 +22,4 @@ Exec=kcheckgmail
 Icon=kcheckgmail
 X-KDE-StartupNotify=true
 Type=Application
-Categories=Qt;KDE;Network
+Categories=Qt;KDE;Network;
