--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -1,7 +1,9 @@
 [Desktop Entry]
 Name=KCheckGMail
+Name[zh_CN]=KCheckGmail
 Name[tr]=KCheckGmail
 GenericName=New email notifier
+GenericName[zh_CN]=新邮件提示
 GenericName[wa]=Notifieu d' noveas emiles
 GenericName[tr]=Yeni E-posta Bildiricisi
 GenericName[pt]=Notificador de mensagens novas
@@ -11,6 +13,7 @@ GenericName[it]=Notificatore di nuove email
 GenericName[es]=Notificador de correo nuevo
 GenericName[ar]=منبه جديد بالبريد
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
+Comment[zh_CN]=Kicker面板显示你已经收到了多少邮件
 Comment[tr]=Gmail hesabınızda kaç tane yeni e-posta olduğunu gösteren bir panel programcığıdır.
 Comment[pt]=Uma 'applet' que inicia uma aplicação que mostra quantas mensagens por ler tem na sua conta Gmail.
 Comment[pl]=Aplet panelu do pokazywania zawartości Twojej skrzynki pocztowej Gmail
