--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -11,6 +11,7 @@ GenericName[pl]=Powiadomienia o nowej poczcie
 GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
 GenericName[es]=Notificador de correo nuevo
+GenericName[ca]=Nou notificador de correu
 GenericName[ar]=منبه جديد بالبريد
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
 Comment[zh_CN]=Kicker面板显示你已经收到了多少邮件
@@ -21,6 +22,7 @@ Comment[it]=Un'applet di Kicker per visualizzare quanti messaggi di posta elettr
 Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
 Comment[el]=Μία εφαρμογή Kicker που σας εμφανίζει τα νέα μηνύματα του Gmail λογαριασμού σας
+Comment[ca]=Mini aplicació que mostra el nombre de missatges sense llegir en un compte deGmail.
 Comment[ar]=بريمج يبين عدد الرسائل الإلكترونية في حساب GMail التي لديك.
 Exec=kcheckgmail
 Icon=kcheckgmail
