Updated Hungarian translation, thanks to Avramucz Péter

--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -10,6 +10,7 @@ GenericName[pt]=Notificador de mensagens novas
 GenericName[pl]=Powiadomienia o nowej poczcie
 GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
+GenericName[hu]=Új email értesítő
 GenericName[es]=Notificador de correo nuevo
 GenericName[ca]=Nou notificador de correu
 GenericName[ar]=منبه جديد بالبريد
@@ -19,6 +20,7 @@ Comment[tr]=Gmail hesabınızda kaç tane yeni e-posta olduğunu gösteren bir p
 Comment[pt]=Uma 'applet' que inicia uma aplicação que mostra quantas mensagens por ler tem na sua conta Gmail.
 Comment[pl]=Aplet panelu do pokazywania zawartości Twojej skrzynki pocztowej Gmail
 Comment[it]=Un'applet di Kicker per visualizzare quanti messaggi di posta elettronica sono presenti nel tuo account di Gmail.
+Comment[hu]=Egy Kicker alkalmazás, amely jelzi, hogy hány email van a GMail fiókjában.
 Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
 Comment[el]=Μία εφαρμογή Kicker που σας εμφανίζει τα νέα μηνύματα του Gmail λογαριασμού σας
